--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,11 +1,20 @@
 
+<div class="container">
+  <div class="row">
+  	<div class="col-md-6">
+		
+		<h1>Home#index</h1>
+		<p>Selecione o estado onde vota para criar uma nova Cola:</p>
+		<% lista_estados.each do |p| %>
+			<div class="row">
+				<%= link_to "/cola/#{p['sigla']}/", class: "btn btn-default col-lg-8" do %>
+					<span class="pull-left"><img src="<%= p["bandeira"] %>" alt="" width="50px;">&nbsp;<%= p["nome"] %></span>
+				<% end %>
+			</div>
+		<% end %>
 
-<h1>Home#index</h1>
-<p>Selecione o estado onde vota para criar uma nova Cola:</p>
-<% lista_estados.each do |p| %>
-	<div class="row">
-		<%= link_to p["nome"], "/cola/#{p['sigla']}/", class: "btn btn-default col-lg-8" %>
+		</div>
 	</div>
-<% end %>
+</div>
 
   
