--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,7 +37,73 @@
 <body>
 
 
-<%= yield %>
+
+<div class="background-image-overlay"></div>
+
+<div id="outer-background-container" data-default-background-img="/assets/images/other_images/bg5.jpg" style="background-image:url('/assets/images/other_images/bg5.jpg');"></div>
+<!-- end: #outer-background-container -->
+
+<!-- Outer Container -->
+<div id="outer-container">
+
+<!-- Left Sidebar -->
+<section id="left-sidebar">
+
+  <div class="logo">
+    <a href="#intro" class="link-scroll"><img src="/assets/images/other_images/logo.png" alt="Twilli Air"></a>
+  </div><!-- .logo -->
+
+  <!-- Menu Icon for smaller viewports -->
+  <div id="mobile-menu-icon" class="visible-xs" onClick="toggle_main_menu();"><span class="glyphicon glyphicon-th"></span></div>
+
+  <ul id="main-menu">
+    <li id="menu-item-text" class="menu-item scroll"><a href="#text">Text</a></li>
+    <li id="menu-item-carousel" class="menu-item scroll"><a href="#carousel">Carousel</a></li>
+    <li id="menu-item-grid" class="menu-item scroll"><a href="#grid">Grid</a></li>
+    <li id="menu-item-featured" class="menu-item scroll"><a href="#featured">Featured</a></li>
+    <li id="menu-item-contact" class="menu-item scroll"><a href="#contact">Contact</a></li>
+  </ul><!-- #main-menu -->
+
+</section><!-- #left-sidebar -->
+<!-- end: Left Sidebar -->
+
+<section id="main-content" class="clearfix">
+
+  <%= yield %>
+
+</section><!-- #main-content -->
+
+<!-- Footer -->
+<section id="footer">
+
+  <!-- Go to Top -->
+  <div id="go-to-top" onclick="scroll_to_top();"><span class="icon glyphicon glyphicon-chevron-up"></span></div>
+
+  <ul class="social-icons">
+    <li><a href="#" target="_blank" title="Facebook"><img src="/assets/images/theme_images/social_icons/facebook.png" alt="Facebook"></a></li>
+    <li><a href="#" target="_blank" title="Twitter"><img src="/assets/images/theme_images/social_icons/twitter.png" alt="Twitter"></a></li>
+    <li><a href="#" target="_blank" title="Google+"><img src="/assets/images/theme_images/social_icons/googleplus.png" alt="Google+"></a></li>
+  </ul>
+
+  <!-- copyright text -->
+  <div class="footer-text-line">&copy; 2014 Twilli | Air</div>
+</section>
+<!-- end: Footer -->
+
+</div><!-- #outer-container -->
+<!-- end: Outer Container -->
+
+<!-- Modal -->
+<!-- DO NOT MOVE, EDIT OR REMOVE - this is needed in order for popup content to be populated in it -->
+<div class="modal fade" id="common-modal" tabindex="-1" role="dialog" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+      <div class="modal-body">
+      </div><!-- .modal-body -->
+    </div><!-- .modal-content -->
+  </div><!-- .modal-dialog -->
+</div><!-- .modal -->
 
 
 <!-- Javascripts
