--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,15 +1,15 @@
 
 
 <article id="intro" class="section-wrapper clearfix" data-custom-background-img="/assets/images/other_images/bg5.jpg">
+  <h2><span class="pull-left"></span></h2>
   <div class="content-wrapper clearfix">
     <div class="col-sm-10 col-md-9 pull-right">
 
-      <h1>Home#index</h1>
-      <p>Selecione o estado onde vota para criar uma nova Cola:</p>
+      
       <% lista_estados.each do |p| %>
           <div class="row">
-            <%= link_to "/cola/#{p['sigla']}/", class: "btn btn-default col-lg-8" do %>
-                <span class="pull-left"><img src="<%= p["bandeira"] %>" alt="" width="50px;">&nbsp;<%= p["nome"] %></span>
+            <%= link_to "/cola/#{p['sigla']}/", class: "btn btn-default col-lg-6" do %>
+                <span class="pull-left"><img src="<%= p["bandeira"] %>" alt="" width="50px;">&nbsp;&nbsp;<%= p["nome"] %></span>
             <% end %>
           </div>
       <% end %>
