--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>PLEY | tour</title>
+  <title>Cola Eleitoral</title>
   
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
@@ -50,18 +50,17 @@
 <section id="left-sidebar">
 
   <div class="logo">
-    <a href="#intro" class="link-scroll"><img src="/assets/images/other_images/logo.png" alt="Twilli Air"></a>
+    <a href="/" class="link-scroll"><img src="/assets/images/other_images/logo.png" alt="Twilli Air"></a>
   </div><!-- .logo -->
 
   <!-- Menu Icon for smaller viewports -->
   <div id="mobile-menu-icon" class="visible-xs" onClick="toggle_main_menu();"><span class="glyphicon glyphicon-th"></span></div>
 
   <ul id="main-menu">
-    <li id="menu-item-text" class="menu-item scroll"><a href="#text">Text</a></li>
-    <li id="menu-item-carousel" class="menu-item scroll"><a href="#carousel">Carousel</a></li>
-    <li id="menu-item-grid" class="menu-item scroll"><a href="#grid">Grid</a></li>
-    <li id="menu-item-featured" class="menu-item scroll"><a href="#featured">Featured</a></li>
-    <li id="menu-item-contact" class="menu-item scroll"><a href="#contact">Contact</a></li>
+    <li id="menu-item-text" class="menu-item"><a href="http://www.pixidea.com.br" target="_blank"><img src="/assets/images/pixidea.jpg" width="120px;"></a></li>
+    <li id="menu-item-text" class="menu-item"><a href="http://www.pixidea.com.br" target="_blank"><img src="/assets/images/transparencia.jpg" width="120px;"></a></li>
+    <li id="menu-item-text" class="menu-item"><a href="http://www.pixidea.com.br" target="_blank"><img src="/assets/images/sensedia.jpg" width="120px;"></a></li>
+    <li id="menu-item-text" class="menu-item"><a href="http://www.pixidea.com.br" target="_blank"><img src="/assets/images/google.jpg" width="120px;"></a></li>
   </ul><!-- #main-menu -->
 
 </section><!-- #left-sidebar -->
@@ -86,7 +85,7 @@
   </ul>
 
   <!-- copyright text -->
-  <div class="footer-text-line">&copy; 2014 Twilli | Air</div>
+  <div class="footer-text-line">&copy; 2014 Cola Eleitoral | Pixidea</div>
 </section>
 <!-- end: Footer -->
 
