--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -11,7 +11,7 @@ html {
 
 body {
     font-family: 'open_sanslight', sans-serif;
-    color: #fff;
+    color: #333;
     background: #000;
     width:100%;
     height:100%;
@@ -27,13 +27,11 @@ a,
 }
 
 a {
-    color:#fff;
-    color:rgba(255,255,255,0.8);
+    color:#333;
     font-weight: bold;
 }
 a:hover {
-    color:#fff;
-    color:rgba(255,255,255,1);
+    color:#000;
     text-decoration: none;
 }
 
