--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -58,9 +58,9 @@
 
   <ul id="main-menu">
     <li id="menu-item-text" class="menu-item"><a href="http://www.pixidea.com.br" target="_blank"><img src="/assets/images/pixidea.jpg" width="120px;"></a></li>
-    <li id="menu-item-text" class="menu-item"><a href="http://www.pixidea.com.br" target="_blank"><img src="/assets/images/transparencia.jpg" width="120px;"></a></li>
-    <li id="menu-item-text" class="menu-item"><a href="http://www.pixidea.com.br" target="_blank"><img src="/assets/images/sensedia.jpg" width="120px;"></a></li>
-    <li id="menu-item-text" class="menu-item"><a href="http://www.pixidea.com.br" target="_blank"><img src="/assets/images/google.jpg" width="120px;"></a></li>
+    <li id="menu-item-text" class="menu-item"><a href="http://dev.transparencia.org.br/" target="_blank"><img src="/assets/images/transparencia.jpg" width="120px;"></a></li>
+    <li id="menu-item-text" class="menu-item"><a href="http://sensedia.com/" target="_blank"><img src="/assets/images/sensedia.jpg" width="120px;"></a></li>
+    <li id="menu-item-text" class="menu-item"><a href="http://www.google.com" target="_blank"><img src="/assets/images/google.jpg" width="120px;"></a></li>
   </ul><!-- #main-menu -->
 
 </section><!-- #left-sidebar -->
