mudança Nem Fudenu

--- a/app/views/home/roleta.html.erb
+++ b/app/views/home/roleta.html.erb
@@ -49,7 +49,7 @@
 	                        
 	
 	                        <div class="col-xs-12 col-sm-4">
-	                        	<a class="btn btn-primary btn-block" href="javascript: nemfudeno();">Nem Fudenu</a>
+	                        	<a class="btn btn-primary btn-block" href="javascript: nemfudeno();">Nem Pensar</a>
 	                        </div><!--/col-->
 	                        <div class="col-xs-12 col-sm-4">
 	                        
